<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/default_margin"
            android:text="@string/preset_save"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/preset_name"/>

    <LinearLayout
        android:id="@+id/button_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/half_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:background="@drawable/default_button_indicator"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/half_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:background="@drawable/default_button_indicator"/>
    </LinearLayout>

</LinearLayout>