<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="@dimen/cover_width"
                android:layout_height="@dimen/cover_width"
                android:scaleType="centerCrop"
                android:src="@drawable/playlist"/>

            <TextView
                android:layout_marginLeft="@dimen/default_margin"
                android:text="@string/click_in_image_to_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/playlist_name"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/half_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:background="@drawable/default_button_indicator"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/half_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:background="@drawable/default_button_indicator"/>
    </LinearLayout>

</LinearLayout>